# AVR-Python-Libraries

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: check.yml  pre-commit_update.yml  publish.yml  tests.yml
bell/avr/mqtt/: .gitignore  _payloads_header.j2  asyncapi.yml  client.j2  constants.j2  dispatcher.j2  docs.j2  messages.jsonc  module.j2  payloads.j2  qt_widget.j2  schema.json  serializer.j2
bell/vrc/: mymodule.py
bell/vrc/mqtt/: client.j2  data.jsonc  docs.j2  messages.j2  messages.jsonc  payloads.j2  schema.json
bell/vrc/serial/: client.py  pcc.py  ports.py
bell/vrc/utils/: decorators.py
tests/: conftest.py  models.py  test_decorators.py  test_env.py  test_images.py  test_main.py  test_mqtt_module.py  test_mqtt_payloads.py  test_mqtt_serializer.py  test_serial_pcc.py  test_timing.py
