[tool.poetry]
    name        = "bell-vrc"
    version     = "0.1.0"
    description = ""
    license     = "Proprietary"
    readme      = "README.md"
    homepage    = "https://github.com/bellflight/VRC-Python-Libraries"
    authors     = ["Chris Padilla <cpadilla@bellflight.com>"]
    packages    = [{ include = "bell/vrc" }]
    include     = ["bell/**/*.pyi"]

[tool.poetry.dependencies]
    python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
    # testing
    pytest       = "^7.1.2"
    pytest-xdist = "^2.5.0"
    # formatting
    black     = "^22.3.0"
    isort     = "^5.10.1"
    autoflake = "^1.4"
    # linting
    pyleft           = "^1.1.0"
    pyproject-flake8 = "^0.0.1-alpha.4"

[tool.coverage.run]
    omit = ["*.venv*"]

[tool.coverage.html]
    show_contexts = true

[tool.pyright]
    typeCheckingMode = "basic"

[tool.pytest.ini_options]
    addopts = "-n auto"

[tool.isort]
    profile = "black"

[build-system]
    requires      = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
